# Core-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.cache/clangd/index/: main.cpp.25CDA9D907A1603E.idx
apps/: CMakeLists.txt
apps/sandbox/: CMakeLists.txt  main.cpp
cmake/dependencies/: Asio.cmake
cmake/modules/: AddExecutable.cmake  AddLibrary.cmake  AddSDK.cmake  CompilerSettings.cmake  Dependencies.cmake  ObjectiveCPP.cmake  PlatformConfig.cmake  PlatformDetection.cmake  StandardSettings.cmake
docs/html/: MetalView_8hpp_source.html  annotated.html  annotated_dup.js  categoryNSObject_07MetalRendererHelper_08.html  classMetalRenderer-members.html  classMetalRenderer.html  classMetalWindow-members.html  classMetalWindow.html  classengine_1_1platform_1_1Window-members.html  classengine_1_1platform_1_1Window.html  classengine_1_1platform_1_1WindowManager.html  classengine_1_1rendering_1_1Window-members.html  classengine_1_1rendering_1_1Window.html  classengine_1_1resource__management_1_1Resource-members.html  classengine_1_1resource__management_1_1Resource.html  classengine_1_1resource__management_1_1Resource.js  classengine_1_1resource__management_1_1ResourceEvent-members.html  classengine_1_1resource__management_1_1ResourceEvent.html  classengine_1_1resource__management_1_1ResourceEvent.js  classengine_1_1resource__management_1_1ResourceHandle-members.html  classengine_1_1resource__management_1_1ResourceHandle.html  classengine_1_1resource__management_1_1ResourceHandle.js  classengine_1_1resource__management_1_1ResourceLoader-members.html  classengine_1_1resource__management_1_1ResourceLoader.html  classengine_1_1resource__management_1_1ResourceLoader.js  classengine_1_1resource__management_1_1ResourceManager-members.html  classengine_1_1resource__management_1_1ResourceManager.html  classengine_1_1resource__management_1_1ResourceManager.js  classengine_1_1resource__management_1_1Shader-members.html  classengine_1_1resource__management_1_1Shader.html  classengine_1_1resource__management_1_1Shader.js  classengine_1_1resource__management_1_1ShaderCompiler-members.html  classengine_1_1resource__management_1_1ShaderCompiler.html  classengine_1_1resource__management_1_1ShaderCompiler.js  classengine_1_1resource__management_1_1ShaderLoader-members.html  classengine_1_1resource__management_1_1ShaderLoader.html  classengine_1_1resource__management_1_1ShaderLoader.js  classengine_1_1resource__management_1_1Texture-members.html  classengine_1_1resource__management_1_1Texture.html  classengine_1_1resource__management_1_1Texture.js  (+71 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+7 more)
include/core/: engine.hpp  graphics_common.hpp  types.hpp
include/core/module/: context.hpp  kernel.hpp  module.hpp  registry.hpp  resolver.hpp
include/platform/: collections.hpp  filesystem.hpp  host.hpp  network.hpp  platform.hpp  types.hpp  window.hpp  window_manager.hpp
include/renderer/: helloTriangle.hpp  renderer.hpp  window.hpp
include/resource_management/: factory.hpp  file.hpp  resource.hpp  resource_manager.hpp  resource_storage.hpp  shader.hpp
include/resource_management/resources/: file.hpp  resource.hpp  shader.hpp  texture.hpp
include/resource_management/resources/shader/: shader.hpp  shader_compiler.hpp
libs/: CMakeLists.txt
libs/glad/: glad.c
libs/headers/glad/: glad.h
libs/headers/slang/: slang-tag-version.h
libs/slang/macos/: libgfx.dylib  libslang-glsl-module.dylib  libslang-rt.dylib
src/: CMakeLists.txt  main.cpp
src/Metal API/: main.mm  metal.window.hpp  metal_window.mm
src/Metal_API/: CMakeLists.txt  main.mm  metal_window.hpp  metal_window.mm
src/core/: CMakeLists.txt  engine.cpp
src/core/module/: kernel.cpp  registry.cpp  resolver.cpp
src/metal/: CMakeLists.txt  main.mm
src/metal/platform/: MetalView.hpp  MetalView.mm  metal_window.hpp  metal_window.mm
src/metal/renderer/: metal_renderer.hpp  metal_renderer.mm
src/platform/: CMakeLists.txt  DirectXWindow.cpp  VulkanWindow.cpp  Win32Window.cpp  filesystem.cpp  glfwWindow.cpp  network.cpp  window.cpp  window_manager.cpp
src/renderer/: CMakeLists.txt  helloTriangle.cpp  window.cpp
src/resource_management/: CMakeLists.txt  factory.cpp  file.cpp  resource.cpp  resource_manager.cpp  resource_storage.cpp  shader.cpp
src/resource_management/resources/: CMakeLists.txt  file.cpp  resource.cpp  shader.cpp  texture.cpp
src/resource_management/resources/shader/: shader.cpp  shader_compiler.cpp
templates/: default.hlsl
