file(GLOB SRC "*.cpp")
add_library(platform ${SRC})

if (ENABLE_METAL)
  file(GLOB_RECURSE OBJ_SRC "*.mm")
  target_sources(platform PRIVATE ${OBJ_SRC})
  target_link_libraries(platform ${METAL_LIBS})
elseif(ENABLE_OPENGL)
  target_link_libraries(platform ${OPENGL_LIBS})
elseif(ENABLE_VULKAN)
  target_link_libraries(platform ${VULKAN_LIBS})
elseif(ENABLE_DIRECTX)
  target_sources(platform ${DIRECTX_LIBS})
endif()