file(GLOB SRC "*.cpp")
add_library(platform ${SRC})

if (ENABLE_METAL)
  file(GLOB_RECURSE OBJ_SRC "*.mm")
  target_sources(platform PRIVATE ${OBJ_SRC})
  target_link_libraries(platform ${METAL_LIBS})
endif()
if(ENABLE_OPENGL)
  target_link_libraries(platform ${OPENGL_LIBS})
endif()
if(ENABLE_VULKAN)
  link_directories(${VULKAN_SDK}/Lib)
  target_link_libraries(platform "${VULKAN_SDK}/Lib/vulkan-1.lib")
endif()
