file(GLOB SRC "*.cpp")
add_library(renderer ${SRC})

if (ENABLE_METAL)
  file(GLOB_RECURSE OBJ_SRC "*.mm")
  target_sources(renderer PRIVATE ${OBJ_SRC})
  target_link_libraries(renderer ${METAL_LIBS})
endif()
if(ENABLE_OPENGL)
  target_link_libraries(renderer ${OPENGL_LIBS})
endif()
if(ENABLE_VULKAN)
  if(WIN32)
    link_directories(renderer "${VULKAN_SDK}/Lib")
    target_link_libraries(renderer "${VULKAN_SDK}/Lib/vulkan-1.lib")
  elseif(UNIX)
    target_link_libraries(renderer vulkan)
  endif()
endif()